# rocnreg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/rocnreg/: __init__.py  plotting.py  regression.py  rocnreg.py
tests/: test_rocnreg.py
