[tool.poetry]
name = "rocnreg"
version = "Characteristic Curve Inference with and without"
description = "Python version of the R package 'ROCnReg' An R Package for Receiver Operating"
authors = ["Massimo Wu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
